--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 5100",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postbuild": "react-snap"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
@@ -20,6 +21,7 @@
     "react-iframe": "^1.8.5",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.17.0",
+    "react-snap": "^1.23.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
